--- a/BangaloreMetro/index.html
+++ b/BangaloreMetro/index.html
@@ -30,7 +30,7 @@
 				<div class="menu_area">
 					<nav class="navbar navbar-expand-lg navbar-light">
 						<!-- Logo -->
-						<a class="navbar-brand logo-href" href="/"> <img
+						<a class="navbar-brand logo-href" href="/BangaloreMetro"> <img
 							src="images/appicon.png" class="logo"
 							alt="Bangalore Metro Logo" />
 						</a>
