--- a/BangaloreMetro/privacy_policy.html
+++ b/BangaloreMetro/privacy_policy.html
@@ -47,7 +47,7 @@
 				<div class="wellcome-heading">
 					<h1>Bangalore Metro</h1>
 					<p>Bangalore Metro is your one stop solution for all information on Namma Metro. The app is mostly designed to run locally using and not download or upload any app data to cloud.</p>
-					<p>As an avid Android user ourselves, we take privacy very seriously. We have not programmed this app to collect any personally identifiable information. We do not store your location or any data. Even the Metro database in stored completely On-Device. No user data is uploaded to cloud or accessed by this app.</p>
+					<p>As avid Android users ourselves, we take privacy very seriously. We have not programmed this app to collect any personally identifiable information. We do not store your location or any data. Even the Metro database in stored completely On-Device. No user data is uploaded to cloud or accessed by this app.</p>
 				</div>
 			</div>
 		</div>
