update priv policy with ads

--- a/BangaloreMetro/privacy_policy.html
+++ b/BangaloreMetro/privacy_policy.html
@@ -43,11 +43,12 @@
 <section class="wellcome_area clearfix section_padding_100_50 intro-module bg-img" id="home">
 	<div class="container h-100" id="wrapper">
 		<div class="row display:flex">
-			<div class="col-md-6">
+			<div class="col-md-8">
 				<div class="wellcome-heading">
 					<h1>Bangalore Metro</h1>
 					<p>Bangalore Metro is your one stop solution for all information on Namma Metro. The app is mostly designed to run locally using and not download or upload any app data to cloud.</p>
 					<p>As avid Android users ourselves, we take privacy very seriously. We have not programmed this app to collect any personally identifiable information. We do not store your location or any data. Even the Metro database in stored completely On-Device. No user data is uploaded to cloud or accessed by this app.</p>
+					<p>We do use Google Ads, so they might show ads as per their <a href="https://policies.google.com/privacy" target="_blank">privacy policy</a> using data from other applications which use Google Advertising.</p>
 				</div>
 			</div>
 		</div>
